Made all inputs of the journal entry form required.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="row column-full">
         <form action="index.html" method="get" class="row flex-column">
           <label for="Notes" class="padding-top padding-bottom">Notes</label>
-          <textarea name="Notes" cols="112" rows="7" id="Notes"></textarea>
+          <textarea name="Notes" cols="112" rows="7" id="Notes" required></textarea>
         </form>
       </div>
       <div class="row justify-end padding-top padding-bottom">
