Put the form's input values into a new object.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </div>
         <div class="column-half">
           <form action="index.html" method="get" class="row flex-column">
-            <label for="Title" class="padding-bottom ">Title</label>
-            <input type="text" name="title" id="title" required>
+            <label for="Title" class="padding-bottom">Title</label>
+            <input type="text" name="title" id="title" class="title-value" required>
             <label for="Photo URL" class="padding-top padding-bottom">Photo URL</label>
             <input type="text" name="Photo URL" id="photo-URL" required>
           </form>
@@ -46,11 +46,11 @@
       <div class="row column-full">
         <form action="index.html" method="get" class="row flex-column">
           <label for="Notes" class="padding-top padding-bottom">Notes</label>
-          <textarea name="Notes" cols="112" rows="7" id="Notes" required></textarea>
+          <textarea name="Notes" cols="112" rows="7" id="Notes" class="notes-value" required></textarea>
         </form>
       </div>
       <div class="row justify-end padding-top padding-bottom">
-        <button class="purple-background button ">SAVE</button>
+        <button class="purple-background button new-entry-button">SAVE</button>
       </div>
     </div>
   </main>
