--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="column-half">
-          <form action="index.html" method="get" class="row flex-column">
+          <form action="index.html" method="get" class="row flex-column form-title-image">
             <label for="Title" class="padding-bottom">Title</label>
             <input type="text" name="title" id="title" class="title-value" required>
             <label for="Photo URL" class="padding-top padding-bottom">Photo URL</label>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="row column-full">
-        <form action="index.html" method="get" class="row flex-column">
+        <form action="index.html" method="get" class="row flex-column form-notes">
           <label for="Notes" class="padding-top padding-bottom">Notes</label>
           <textarea name="Notes" cols="112" rows="7" id="Notes" class="notes-value" required></textarea>
         </form>
