--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
           </form>
         </div>
       </div>
-      <div class="row column-full">
-        <form action="index.html" method="get" class="row flex-column form-notes">
-          <label for="Notes" class="padding-top padding-bottom">Notes</label>
-          <textarea name="Notes" cols="112" rows="7" id="Notes" class="notes-value" required></textarea>
-        </form>
+      <div class="row">
+        <div class="column-full">
+          <form action="index.html" method="get" class="row flex-column form-notes column-full">
+            <label for="Notes" class="padding-top padding-bottom">Notes</label>
+            <textarea name="Notes" rows="7" id="Notes" class="notes-value" required></textarea>
+          </form>
+        </div>
       </div>
-      <div class="row justify-end padding-top padding-bottom">
+      <div class="row padding-top padding-bottom justify-end">
         <button class="purple-background button new-entry-button">SAVE</button>
       </div>
     </div>
