Adjusted the eventlistener for the form object.  Added an id for the form.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row column-full">
         <h2>New Entry</h2>
       </div>
-      <form class="row">
+      <form class="row" id="submission-form">
         <div class="column-half">
           <div class="image-container">
             <img class="image-size image-place-holder" src="images/placeholder-image-square.jpg">
