--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 </head>
 <body class="gray-background">
   <header class="purple-background">
-    <div class="container row">
-      <div class="column-full">
-        <h4 class="white-text">Code Journal</h4>
+    <div class="container">
+      <div class="row">
+        <div class="column-full">
+          <h4 class="white-text">Code Journal</h4>
+        </div>
       </div>
     </div>
   </header>
   <main>
     <div class="container" data-view="entry-form">
-      <div class="row column-full">
-        <h2>New Entry</h2>
+      <div class="row">
+        <div class="column-full">
+          <h2>New Entry</h2>
+        </div>
       </div>
       <form class="row" id="submission-form">
         <div class="column-half">
