--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
       </form>
     </div>
+    <div data-view="entries"></div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
