--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         </div>
       </form>
     </div>
-    <div data-view="entries"></div>
+    <div data-view="entries">
+      <ul></ul>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
