Added some dummy journal entries to the unordered list in the HTML and style them to match the wireframe.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,54 @@
         </div>
       </form>
     </div>
-    <div data-view="entries">
-      <ul></ul>
+    <div class="container" data-view="entries">
+      <div class="row">
+        <div class="column-half">
+          <h2>Entries</h2>
+        </div>
+        <div class="column-half">
+          <div class="row justify-end align-center height-100">
+            <button class="purple-background button">NEW</button>
+          </div>
+        </div>
+      </div>
+      <ul>
+        <li>
+          <div class="row padding-bottom">
+            <div class="column-half">
+              <div class="image-container">
+                <img class="image-size image-place-holder" src="https://images-na.ssl-images-amazon.com/images/I/91XOiIyTltL.jpg">
+              </div>
+            </div>
+            <div class="column-half">
+              <h3>Calvin and Hobbes</h3>
+              <p>
+                Calvin and Hobbes is a daily American comic strip created by cartoonist Bill Watterson that was syndicated from November
+                18, 1985 to December 31, 1995. Commonly cited as "the last great newspaper comic",[2][3][4] Calvin and Hobbes has
+                enjoyed broad and enduring popularity, influence, and academic and philosophical interest.
+              </p>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="row padding-bottom padding-top">
+            <div class="column-half">
+              <div class="image-container">
+                <img class="image-size image-place-holder" src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1240w,f_auto,q_auto:best/newscms/2018_37/2566431/180914-stock-universe-al-1025.jpg">
+              </div>
+            </div>
+            <div class="column-half">
+              <h3>The Universe</h3>
+              <p>
+                The universe (Latin: universus) is all of space and time[a] and their contents,[10] including planets, stars, galaxies,
+                and all other forms of matter and energy. The Big Bang theory is the prevailing cosmological description of the
+                development of the universe. According to this theory, space and time emerged together 13.787±0.020 billion years
+                ago,[11] and the universe has been expanding ever since.
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
   </main>
   <script src="js/data.js"></script>
