Define a function that takes a single journal entry object and returns a DOM tree that matches one of the example entries in the HTML.  Use a loop to create a DOM tree for each journal entry in the data model and append it to the page when the 'DOMContentLoaded' event is fired.

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           </div>
         </div>
       </div>
-      <ul>
-        <li>
+      <ul class="list">
+        <!-- <li>
           <div class="row padding-bottom">
             <div class="column-half">
               <div class="image-container">
-                <img class="image-size image-place-holder" src="https://images-na.ssl-images-amazon.com/images/I/91XOiIyTltL.jpg">
+                <img class="image-size" src="https://images-na.ssl-images-amazon.com/images/I/91XOiIyTltL.jpg">
               </div>
             </div>
             <div class="column-half">
@@ -92,7 +92,7 @@
           <div class="row padding-bottom padding-top">
             <div class="column-half">
               <div class="image-container">
-                <img class="image-size image-place-holder" src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1240w,f_auto,q_auto:best/newscms/2018_37/2566431/180914-stock-universe-al-1025.jpg">
+                <img class="image-size" src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1240w,f_auto,q_auto:best/newscms/2018_37/2566431/180914-stock-universe-al-1025.jpg">
               </div>
             </div>
             <div class="column-half">
@@ -105,7 +105,7 @@
               </p>
             </div>
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
   </main>
