Ensure that refreshing the pages shows the same view as before refreshing.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div class="container">
       <div class="row">
         <div class="column-full">
-          <div class="row align-center" id="header-of-website">
-            <h4 class="white-text">Code Journal</h4>
+          <div class="row align-center white-text" id="header-of-website">
+            <h4>Code Journal</h4>
+            <a class="view hidden" id="navigation" data-view="entries">Entries</a>
           </div>
         </div>
       </div>
@@ -57,7 +58,7 @@
           </div>
           <div class="column-full padding-top padding-bottom">
             <div class="row justify-end">
-              <button class="purple-background button swap-view new-entry-button">SAVE</button>
+              <button class="purple-background button new-entry-button">SAVE</button>
             </div>
           </div>
         </form>
@@ -69,7 +70,7 @@
           </div>
           <div class="column-half">
             <div class="row justify-end align-center height-100">
-              <a class="purple-background button" data-view="entry-form">NEW</a>
+              <a class="purple-background button display-flex justify-center align-center" data-view="entry-form">NEW</a>
             </div>
           </div>
         </div>
