Clean up all unnecessary styling.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="column-full padding-top padding-bottom">
             <div class="row justify-end">
-              <button class="purple-background button new-entry-button">SAVE</button>
+              <button class="purple-background button">SAVE</button>
             </div>
           </div>
         </form>
