--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="column-full">
           <div class="row align-center white-text" id="header-of-website">
-            <h4>Code Journal</h4>
+            <h3>Code Journal</h3>
             <a class="view hidden" id="navigation" data-view="entries">Entries</a>
           </div>
         </div>
@@ -73,6 +73,9 @@
               <a class="purple-background button display-flex justify-center align-center" data-view="entry-form">NEW</a>
             </div>
           </div>
+        </div>
+        <div class="row justify-center">
+          <p class="view hidden" data-view="entries" id="no-entries-text">No entries have been recorded.</p>
         </div>
         <ul class="list">
         </ul>
