Listen for clicks on the parent element of all rendered entries. Show the entry form if an edit icon was clicked.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
 </head>
+
 <body class="gray-background anchor">
   <header class="purple-background">
     <div class="container">
@@ -70,14 +72,15 @@
           </div>
           <div class="column-half">
             <div class="row justify-end align-center height-100">
-              <a class="purple-background button display-flex justify-center align-center" data-view="entry-form">NEW</a>
+              <a class="purple-background button display-flex justify-center align-center"
+                data-view="entry-form">NEW</a>
             </div>
           </div>
         </div>
         <div class="row justify-center">
           <p class="view hidden" data-view="entries" id="no-entries-text">No entries have been recorded.</p>
         </div>
-        <ul class="list">
+        <ul class="swap-view">
         </ul>
       </div>
     </div>
@@ -85,6 +88,7 @@
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
 
 <!-- <i class="fas fa-pen"></i> -->
