--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row padding-bottom">
               <label for="Notes">Notes</label>
             </div>
-            <textarea name="Notes" rows="7" id="Notes" class="notes-value" required></textarea>
+            <textarea name="Notes" rows="7" id="notes" class="notes-value" required></textarea>
           </div>
           <div class="column-full padding-top padding-bottom">
             <div class="row justify-end">
@@ -80,7 +80,7 @@
         <div class="row justify-center">
           <p class="view hidden" data-view="entries" id="no-entries-text">No entries have been recorded.</p>
         </div>
-        <ul class="swap-view">
+        <ul class="list swap-view">
         </ul>
       </div>
     </div>
