Add a click target for deleting an entry to the entry form that only appears if the user is editing an entry.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <textarea name="Notes" rows="7" id="notes" class="notes-value" required></textarea>
           </div>
           <div class="column-full padding-top padding-bottom">
-            <div class="row justify-end">
+            <div class="row justify-end" id="buttons">
               <button class="purple-background button">SAVE</button>
             </div>
           </div>
