--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <textarea name="Notes" rows="7" id="notes" class="notes-value" required></textarea>
           </div>
           <div class="column-full padding-top padding-bottom">
-            <div class="row justify-end" id="buttons">
+            <div class="row justify-space-between" id="buttons">
+              <button class="hidden delete-button">Delete Entry</button>
               <button class="purple-background button">SAVE</button>
             </div>
           </div>
