--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
   </header>
   <main>
     <div class="container">
+      <div class="row center-of-page">
+        <div class="column-full white-box hidden position-fixed" id="modal">
+          <div class="row justify-center button-content-height align-center">
+            <p>Are you sure you want to delete this entry</p>
+          </div>
+          <div class="row justify-space-between button-content-height align-center" id="modal-buttons">
+            <button class="cancel-button" type="button">CANCEL</button>
+            <button class="confirm-button" type="button">CONFIRM</button>
+          </div>
+        </div>
+      </div>
       <div class="view" data-view="entry-form">
         <div class="row">
           <div class="column-full">
@@ -38,13 +49,6 @@
           </div>
         </div>
         <form class="row swap-view" id="submission-form" data-view="entries">
-          <div class="center-of-page white-box hidden" id="modal">
-            <p>Are you sure you want to delete this entry</p>
-            <div class="row justify-space-between">
-              <button class="cancel-button" type="button">CANCEL</button>
-              <button class="confirm-button" type="button">CONFIRM</button>
-            </div>
-          </div>
           <div class="column-half">
             <div class="image-container">
               <img class="image-size image-place-holder" src="images/placeholder-image-square.jpg">
