Remove the entry from the data model and the entry's DOM tree from the page if the user clicks Delete. Show the Entries list if the user clicks Delete. Remove all CSS styling that had no affect or was otherwise unnecessary.Test all functionality again in a private browsing session.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="row justify-space-between button-content-height align-center" id="modal-buttons">
             <button class="cancel-button" type="button">CANCEL</button>
-            <button class="confirm-button" type="button">CONFIRM</button>
+            <button class="confirm-button" data-view="entries" type="button">CONFIRM</button>
           </div>
         </div>
       </div>
